@@ -15,7 +15,7 @@ minetest.register_privilege("heal", {
 function heal.heal_health_and_hunger(pname)
   local player = minetest.get_player_by_name(pname)
   if not player then return end
-  player:set_hp(20)
+  player:set_hp(player:get_properties().hp_max)
   hunger.update_hunger(player, 30)
 	sprint.set_stamina(player, SPRINT_STAMINA)
 	portal_sickness.reset(pname)
