@@ -1,3 +1,5 @@
+[2020/2/22] Redesigned the hunger/passive-healing system, including how bandages work.
+[2020/2/22] Player's maximum HP increases as they gain mineral XP.
 [2020/2/22] Increased the cap on players' max mineral XP.
 [2020/2/21] Attempt to fix the long-standing bug where the HUD stat-icons would not show the real values.
 [2020/2/21] Finally fixed the bug where player could sometimes fall through the world after being kicked off a sled.
